feat: rename workspace to spinners-laundry-backend and update package.json dependencies
feat: add user and user session models to Prisma schema and migration files

feat: implement authentication module with login, logout, and profile retrieval

feat: create session management with session repository and service

feat: add password hashing and validation service

feat: implement custom decorators and guards for user authentication

feat: enhance main application module with global configurations and static file serving

feat: add utility functions for date manipulation

feat: introduce logging module for better logging capabilities

feat: implement pagination interfaces for generic data handling

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "workspace",
+  "name": "spinners-laundry-backend",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -7,22 +7,32 @@
   "license": "UNLICENSED",
   "scripts": {
     "build": "nest build",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "migration:local": "prisma migrate dev && prisma generate",
+    "migration:generate": "prisma generate",
+    "migration:prod": "prisma migrate deploy",
+    "start:prod": "node dist/src/main"
   },
   "dependencies": {
+    "@nestjs/axios": "^4.0.0",
     "@nestjs/common": "^11.0.1",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
+    "@nestjs/jwt": "^11.0.0",
+    "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/schedule": "^6.0.0",
+    "@nestjs/serve-static": "^5.0.3",
+    "@nestjs/swagger": "^11.2.0",
+    "@prisma/client": "^6.9.0",
+    "argon2": "^0.43.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
+    "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
+    "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
