--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "class-validator": "^0.14.2",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
+    "ioredis": "^5.6.1",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
